# ZecKit

./: CONTRIBUTING.md  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: e2e-test.yml
cli/: Cargo.toml  Readme.md
cli/fixtures/: unified-addresses.json
cli/src/: utils.rs
cli/src/commands/: test.rs  up.rs
cli/src/config/: settings.rs
cli/src/docker/: compose.rs  health.rs
docker/compose/: zebra.yml
docker/configs/: zebra.toml  zebra.toml.bak
docker/healthchecks/: check-services.sh
docker/lightwalletd/: Dockerfile  entrypoint.sh
docker/zaino/: Dockerfile
docker/zebra/: Dockerfile
docker/zingo/: Dockerfile  entrypoint.sh
faucet/: Readme.md
faucet/app/: main.py  wallet.py
faucet/app/routes/: faucet.py  health.py  stats.py
fixtures/: unified-addresses.json
scripts/:  mine-to-wallet.sh  setup-mining-address.sh  setup-wsl-runner.sh
specs/: architecture.md  technical-spec.md
tests/smoke/: basic-health.sh
zeckit-faucet/: Cargo.toml  Dockerfile
zeckit-faucet/api/: faucet.rs
zeckit-faucet/src/: main.rs
zeckit-faucet/src/api/: faucet.rs  mod.rs  wallet.rs
zeckit-faucet/src/wallet/: manager.rs
